--- a/index.html
+++ b/index.html
@@ -1,13 +1,120 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Auto-bankrupt</title>
 </head>
+
 <body>
-    <script src="app.js"></script>
+    <header>
+        <div class="container">
+            <div class="header-wrapper">
+                <div class="logo-wrapper">
+                    <div class="logo-one">Авто</div>
+                    <div class="logo-two">Банкрот</div>
+                </div>
+                <div class="menu-nav">
+                    <a href="">О проекте</a>
+                    <a href="">Консультация</a>
+                    <a href="">Инструкция</a>
+                    <a href="">Возможности</a>
+                </div>
+                <div class="telephone">
+                    <a href="tel:8800000000">8 800 0000000</a>
+                </div>
+            </div>
+
+        </div>
+    </header>
+    <section>
+        <div class="container">
+            <div class="displayOne-wrapper">
+                <div class="column left">
+                    <div class="title">
+                        <h1>Сервис по работе <br>
+                            <span>с долгами граждан</span>
+                        </h1>
+                    </div>
+                    <div class="subtitle">
+                        <p>
+                            <span>Автобанкрот</span> - платформа, которая помогает гражданам списать долги, снизить
+                            проценты и ежемесяные платежи по кредитам и займам, прекратить исполнительное производство у
+                            приставов, отменить судебный приказ.
+                        </p>
+                    </div>
+                    <div class="btn">Регистрация</div>
+                </div>
+
+                <div class="column right">
+                    <div class="window-video">
+                        <div class="btn-play"><i class="fa-solid fa-play"></i></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section>
+        <div class="container">
+            <div class="working-with-wrapper">
+                <div class="working-with__title">Сервис работает с ...</div>
+                <div class="slider-wrapper">
+                    <div class="slider-line">
+                        <img src="img/imgg1.png" alt="">
+                        <img src="img/imgg2.png" alt="">
+                        <img src="img/imgg3.png" alt="">
+                        <img src="img/imgg4.png" alt="">
+                        <img src="img/imgg5.png" alt="">
+                        <img src="img/imgg6.png" alt="">
+                        <img src="img/imgg1.png" alt="">
+                        <img src="img/imgg2.png" alt="">
+                        <img src="img/imgg3.png" alt="">
+                        <img src="img/imgg4.png" alt="">
+                        <img src="img/imgg5.png" alt="">
+                        <img src="img/imgg6.png" alt="">
+                        <img src="img/imgg1.png" alt="">
+                        <img src="img/imgg2.png" alt="">
+                        <img src="img/imgg3.png" alt="">
+                        <img src="img/imgg4.png" alt="">
+                        <img src="img/imgg5.png" alt="">
+                        <img src="img/imgg6.png" alt="">
+                    </div>
+                    <input type="range" value="0" max="100" min="0" class="range" oninput="lel()">
+                    <div class="before"></div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="section-tabs">
+        <div class="container">
+            <div class="tabs-wrapper">
+                <div class="tabs-title">Автобанкрот позволяет легко и доступно провести:</div>
+                <div class="buttons">
+                    <div class="btn btn__tabs">
+                        Банкротство через
+                        МФЦ&#160или суд
+                    </div>
+                    <div class="btn btn__tabs">
+                        Работу с судебными приставами
+                    </div>
+                    <div class="btn btn__tabs">
+                        Работу с банками
+                        и МФО
+                    </div>
+                    <div class="btn btn__tabs">
+                        Списание долгов без банкротства
+                    </div>
+                </div>
+                <div class="tabs"></div>
+            </div>
+        </div>
+    </section>
+
+    <script src="https://kit.fontawesome.com/ef7b626c97.js" crossorigin="anonymous"></script>
+    <script src="app1.js"></script>
 </body>
+
 </html>
