--- a/index.html
+++ b/index.html
@@ -93,24 +93,181 @@
             <div class="tabs-wrapper">
                 <div class="tabs-title">Автобанкрот позволяет легко и доступно провести:</div>
                 <div class="buttons">
-                    <div class="btn btn__tabs">
+                    <div class="btn btn__tabs" data-tab="#tab_1">
                         Банкротство через
                         МФЦ&#160или суд
                     </div>
-                    <div class="btn btn__tabs">
+                    <div class="btn btn__tabs" data-tab="#tab_2">
                         Работу с судебными приставами
                     </div>
-                    <div class="btn btn__tabs">
+                    <div class="btn btn__tabs" data-tab="#tab_3">
                         Работу с банками
                         и МФО
                     </div>
-                    <div class="btn btn__tabs">
+                    <div class="btn btn__tabs" data-tab="#tab_4">
                         Списание долгов без банкротства
                     </div>
                 </div>
-                <div class="tabs"></div>
+                <div class="tabs-wrapper">
+                    <div class="tab" id="tab_1">
+                        <div class="tabs-column-left">
+                            <h2>Банкротство через МФЦ или суд</h2>
+                            <p>Это основная функция сервиса. Заполнив анкету, сервис самостоятельно определит выгодно ли
+                                для вас банкротство. Если да, то определит какое именно - через арбитражный суд или МФЦ.
+                                Вам нужно лишь следовать видеоинструкциям и выполнять все, что просит сервис.
+                                В сервисе предусмотрена <span>функция сохранения имущества</span>, в том числе
+                                ипотечного жилья.</p>
+                            <div class="tabs-items">
+                                <div class="tabs__item">
+                                    <span>8 457 человек</span> <br>
+                                    зарегистрировано <br>
+                                    в сервисе
+                                </div>
+                                <div class="tabs__item">
+                                    <span>6 156 человек</span> <br>
+                                    на банкротство
+                                    через суд
+                                </div>
+                                <div class="tabs__item">
+                                    <span>2 301 человек</span> <br>
+                                    на банкротство
+                                    через МФЦ
+                                </div>
+                            </div>
+                        </div>
+                        <div class="tabs-column-right">
+                            <div class="window-video-tab">
+                                <div class="btn-play"><i class="fa-solid fa-play"></i></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="tab" id="tab_2">
+                        <div class="tabs-column-left">
+                            <h2>Работа с судебными приставами</h2>
+                            <p>До приставов не дозвониться и не достучаться. Сервис помогает работать с вашим
+                                исполнительным производством: отменить судебные приказы, закрыть, приостановить
+                                взыскание, подать жалобу на пристава.</p>
+                            <div class="tabs-items">
+                                <div class="tabs__item">
+                                    <span>1084+</span> <br>
+
+                                    отменено судебных
+                                    приказов
+                                </div>
+                                <div class="tabs__item">
+                                    <span>84+</span> <br>
+
+                                    прекращено
+                                    исполнительных
+                                    производств
+                                </div>
+                                <div class="tabs__item">
+                                    <span> 161+ </span> <br>
+
+                                    подано обращений
+                                    на работу судебных приставов
+                                </div>
+                            </div>
+                        </div>
+                        <div class="tabs-column-right">
+                            <div class="window-video-tab">
+                                <div class="btn-play"><i class="fa-solid fa-play"></i></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="tab" id="tab_3">
+                        <div class="tabs-column-left">
+                            <h2>Работа с банками и МФО</h2>
+                            <p>Сервис подключен к 145 банкам и 54 МФО, что позволяет решать вопросы по снижению
+                                процентов и ежемесячных платежей
+                                по кредитам и займам, получить кредитные каникулы, закрыть кредитный договор, отменить
+                                штрафы и пени за просрочку.</p>
+                            <div class="tabs-items">
+                                <div class="tabs__item">
+                                    <span>2487+</span> <br>
+
+                                    человек направили обращения в банки и МФО
+                                </div>
+                                <div class="tabs__item">
+                                    <span>247+</span> <br>
+
+                                    гражданам снижены ежемесячные выплаты по кредитам
+                                </div>
+
+                            </div>
+                        </div>
+                        <div class="tabs-column-right">
+                            <div class="window-video-tab">
+                                <div class="btn-play"><i class="fa-solid fa-play"></i></div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="tab" id="tab_4">
+                        <div class="tabs-column-left">
+                            <h2>Списание долгов без банкротства</h2>
+                            <p>Списание долгов без банкротства новая услуга на рынке России, подходит для тех, кто хочет
+                                сохранить имущество, занимает высокие должности в сфере страхования и в банковском
+                                секторе. Услуга индивидуальная.</p>
+                            <div class="tabs-items">
+                                <div class="tabs__item">
+                                    <span>111+</span> <br>
+                                    подано заявок на списание долгов
+                                    без банкротства
+                                </div>
+                                <div class="tabs__item">
+                                    <span>9+</span> <br>
+                                    человек списано долгов через сервис без банкротства
+                                </div>
+                            </div>
+                        </div>
+                        <div class="tabs-column-right">
+                            <div class="window-video-tab">
+                                <div class="btn-play"><i class="fa-solid fa-play"></i></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
+    </section>
+    <section class="callCenter bgCallCenter">
+        <div class="container container_callCenter">
+            <div class="callCentet-title">Центр консультации <br>
+                и технической поддержки</div>
+            <div class="callCenterPhone"><a href="tel:8 800 555 55 55">8 800 555 55 55</a></div>
+            <div class="callCenterSubtitle">звонок по России <span>бесплатный</span></div>
+            <div class="callCenterBtn btn">Обратный звонок</div>
+        </div>
+    </section>
+    <section class="manual">
+        <div class="container">
+            <div class="manual-title">Как пользоваться <br>
+                сервисом?</div>
+            <div class="manual-wrapper">
+                <div class="manual-column-left"><img src="img/laptop.png" alt=""></div>
+                <div class="manual-column-right">
+                    <div class="manual-item-wrapper">
+                        <div class="manual-item">Зарегистрироваться</div>
+                        <div class="manual-item">Заполнить анкету</div>
+                        <div class="manual-item">Оплатить <br>
+                            регистрационный <br>
+                            сбор</div>
+                        <div class="manual-item">После поступления оплаты в <br> главном окне в личном кабинете <br>
+                            появится
+                            видеоинструкция и номер <br> вашего специалиста, которму Вы <br>
+                            можете задать любой вопрос.</div>
+                        <div class="manual-item">Далее следуйте <br> видеоинструкциям и <br>
+                            становитесь свободными <br>
+                            в финансовом плане.</div>
+                    </div>
+                    <div class="line"></div>
+                    <div class="btn btnCall"><span></span><span></span><span></span><span></span><span></span> Зарегистрироваться</div>
+
+                </div>
+            </div>
+        </div>
+        <!-- <img src="img/Group5.png" alt="" class="xxxxxx"> -->
     </section>
 
     <script src="https://kit.fontawesome.com/ef7b626c97.js" crossorigin="anonymous"></script>
