--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
             <div class="callCenterBtn btn">Обратный звонок</div>
         </div>
     </section>
-    <section class="manual">
+    <section class="section-tabs">
         <div class="container">
             <div class="manual-title">Как пользоваться <br>
                 сервисом?</div>
@@ -262,12 +262,46 @@
                             в финансовом плане.</div>
                     </div>
                     <div class="line"></div>
-                    <div class="btn btnCall"><span></span><span></span><span></span><span></span><span></span> Зарегистрироваться</div>
+                    <div class="btn btnCall"><span></span><span></span><span></span><span></span><span></span>
+                        Зарегистрироваться</div>
 
                 </div>
             </div>
         </div>
         <!-- <img src="img/Group5.png" alt="" class="xxxxxx"> -->
+    </section>
+    <section class="mission">
+        <div class="container">
+            <div class="missonsMainWrapper">
+                <h2>Автобанкрот - продукт доступный <br>
+                    для всех без исключения!</h2>
+                <p>Наша миссия - дать возможность гражданам решить свои <br> вопрсоы с долгами без посредников</p>
+                <div class="missions-wrapper">
+                    <div class="missons-item">
+                        <div class="missons-item__title"><span>14 754+</span><br> зарегистрированных
+                            пользователей
+                            на платформе</div>
+                    </div>
+                    <div class="missons-item">
+                        <div class="missons-item__title"><span>4 203+</span> <br> поданных заявлений
+                            на банкротство через
+                            суд и МФЦ</div>
+                    </div>
+                    <div class="missons-item">
+                        <div class="missons-item__title"><span>1084+</span> <br> отменено судебных
+                            приказов и
+                            исполнительных
+                            производств</div>
+                    </div>
+                    <div class="missons-item">
+                        <div class="missons-item__title"><span>247+</span><br> гражданам снижены
+                            ежемесячные выплаты
+                            по кредитам</div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
     </section>
 
     <script src="https://kit.fontawesome.com/ef7b626c97.js" crossorigin="anonymous"></script>
