--- a/index.html
+++ b/index.html
@@ -303,6 +303,109 @@
 
         </div>
     </section>
+    <section class="platform">
+        <div class="container">
+            <h2>Автобанкрот - платформа, направленная на финансовую стабильность в стране</h2>
+            <div class="platform-item">
+                <div class="platform-item__img"><img src="img/putin.png" alt=""></div>
+                <div class="platform-item__text">
+                    <h3>«Если вылата долга в силу объективных причин оказывается в принципе невозможна, то в этом случае
+                        гражданин не должен попасть в тупик, становиться заложником требований кредиторов. Процедура
+                        банкротства должна быть посильной и необременительной.»</h3>
+                    <p>Президент РФ, В. В. Путин</p>
+                </div>
+            </div>
+            <div class="platform-item">
+                <div class="platform-item__img"><img src="img/neputin.png" alt=""></div>
+                <div class="platform-item__text">
+                    <h3>«Каждый гражданин Российской Федерации вправе списать долги по кредитам, для этого в России
+                        должны работать отлаженные механизмы. Любые манипуляции, создание искусственных препятствий
+                        должны пресекаться. Бизнес не должен наживаться на проблемах граждан, которые и так находятся в
+                        сложной жизненной ситуации. Платформа “Автобанкрот” - универсальный и доступный сервис для
+                        решения этих задач.»</h3>
+                    <p>Генеральный директор проекта “Автобанкрот”, Р. М. Акназаров</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="features">
+        <div class="container">
+            <h2>Дополнительные возможности сервиса</h2>
+            <div class="features-wrapper">
+                <div class="features__item">база арбитражных управляющих</div>
+                <div class="features__item">отслеживание статуса дела в личном кабинете</div>
+                <div class="features__item">курс финансовой грамотности “Жизнь без долгов”</div>
+                <div class="features__item">неограниченный доступ к функционалу</div>
+                <div class="features__item">консультация юристов</div>
+                <div class="features__item">выпуск электронной подписи внутри сервиса</div>
+                <div class="features__item">закрепленный специалист</div>
+                <div class="features__item">мобильное приложение</div>
+                <div class="features__item">возможность сбора документов через сервис</div>
+                <div class="features__item">удаленное участие в суде по банкротству</div>
+            </div>
+            <div class="btn featuresBtn">Зарегистрироваться</div>
+        </div>
+    </section>
+    <section class="video">
+        <div class="container">
+            <div class="video-wrapper">
+                <div class="video-wrapper-item">
+                    <div class="video__item"><i class="fa-solid fa-play btn-play"></i></div>
+                    <div class="video__item__name">Что такое банкротство?</div>
+                </div>
+                <div class="video-wrapper-item">
+                    <div class="video__item"><i class="fa-solid fa-play btn-play"></i></div>
+                    <div class="video__item__name">Как снизить платежи по кредиту?</div>
+                </div>
+                <div class="video-wrapper-item">
+                    <div class="video__item"><i class="fa-solid fa-play btn-play"></i></div>
+                    <div class="video__item__name">МФЦ или суд?</div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <footer class="footer">
+        <div class="container footer-container">
+            <div class="head-footer">
+                <div class="head-footer-column">
+                    <a href="#">Лицензионный договор</a>
+                    <a href="#">Политика конфиденциальных данных</a>
+                    <a href="#">Для Арбитражных управляющих</a>
+                    <a href="#">Для юристов и юридических компаний</a>
+                </div>
+                <div class="head-footer-column">
+                    <a href="">О компании</a>
+                    <a href="">Вакансии</a>
+                    <a href="">Контакты</a>
+                    <a href="">Информация об оплате</a>
+                </div>
+                <div class="head-footer-column">
+                    <a href="tel:88000000000"> <span>8 800 000 00 00</span></a>
+                </div>
+                <div class="head-footer-column">
+                    <a href=""><img src="img/ios.png" alt=""></a>
+                    <a href=""><img src="img/android.png" alt=""></a>
+                </div>
+            </div>
+            <div class="foot-footer">
+                <div class="foot-footer-column">
+                    <div class="logo-wrapper">
+                        <div class="logo-one">Авто</div>
+                        <div class="logo-two">Банкрот</div>
+                    </div>
+                </div>
+                <div class="foot-footer-column">
+                    <p>©2023 - Автобанкрот - сервис по работе с долгами</p>
+                    <p>Terms of Service Privacy Policy</p>
+                </div>
+                <div class="foot-footer-column">
+                    <a href=""><i class="fa-brands fa-instagram"></i></a>
+                    <a href=""><i class="fa-brands fa-twitter"></i></a>
+                    <a href=""><i class="fa-brands fa-facebook"></i></a>
+                    </div>
+            </div>
+        </div>
+    </footer>
 
     <script src="https://kit.fontawesome.com/ef7b626c97.js" crossorigin="anonymous"></script>
     <script src="app1.js"></script>
