--- a/index.html
+++ b/index.html
@@ -26,10 +26,12 @@
                 <div class="telephone">
                     <a href="tel:8800000000">8 800 0000000</a>
                 </div>
+                <div class="menu-burger"><i class="fa-solid fa-bars"></i></div>
             </div>
 
         </div>
     </header>
+   
     <section>
         <div class="container">
             <div class="displayOne-wrapper">
@@ -46,7 +48,7 @@
                             приставов, отменить судебный приказ.
                         </p>
                     </div>
-                    <div class="btn">Регистрация</div>
+                    <div class="btn sectionOne">Регистрация</div>
                 </div>
 
                 <div class="column right">
@@ -253,9 +255,9 @@
                         <div class="manual-item">Оплатить <br>
                             регистрационный <br>
                             сбор</div>
-                        <div class="manual-item">После поступления оплаты в <br> главном окне в личном кабинете <br>
+                        <div class="manual-item">После поступления оплаты в главном окне в личном кабинете <br>
                             появится
-                            видеоинструкция и номер <br> вашего специалиста, которму Вы <br>
+                            видеоинструкция и номер  вашего специалиста, которму Вы 
                             можете задать любой вопрос.</div>
                         <div class="manual-item">Далее следуйте <br> видеоинструкциям и <br>
                             становитесь свободными <br>
@@ -268,7 +270,6 @@
                 </div>
             </div>
         </div>
-        <!-- <img src="img/Group5.png" alt="" class="xxxxxx"> -->
     </section>
     <section class="mission">
         <div class="container">
@@ -317,7 +318,7 @@
             </div>
             <div class="platform-item">
                 <div class="platform-item__img"><img src="img/neputin.png" alt=""></div>
-                <div class="platform-item__text">
+                <div class="platform-item__text covichki">
                     <h3>«Каждый гражданин Российской Федерации вправе списать долги по кредитам, для этого в России
                         должны работать отлаженные механизмы. Любые манипуляции, создание искусственных препятствий
                         должны пресекаться. Бизнес не должен наживаться на проблемах граждан, которые и так находятся в
