--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
 </head>
 
 <body>
+    <div class="menu-nav-burger">
+        <a href="">О проекте</a>
+        <a href="">Консультация</a>
+        <a href="">Инструкция</a>
+        <a href="">Возможности</a>
+    </div>
     <header>
         <div class="container">
             <div class="header-wrapper">
@@ -31,7 +37,7 @@
 
         </div>
     </header>
-   
+  
     <section>
         <div class="container">
             <div class="displayOne-wrapper">
