--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
     </footer>
 
     <script src="https://kit.fontawesome.com/ef7b626c97.js" crossorigin="anonymous"></script>
-    <script src="app1.js"></script>
+    <script src="app.js"></script>
 </body>
 
 </html>
