--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
                     <div class="window-video">
                         <div class="btn-play"><i class="fa-solid fa-play"></i></div>
                     </div>
+                    <div class="btn sectionOneMobile">Регистрация</div>
                 </div>
             </div>
         </div>
@@ -243,7 +244,7 @@
         </div>
     </section>
     <section class="section-tabs">
-        <div class="container">
+        <div class="container container-manual">
             <div class="manual-title">Как пользоваться <br>
                 сервисом?</div>
             <div class="manual-wrapper">
