--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 
 <body>
     <div class="menu-nav-burger">
-        <a href="">О проекте</a>
-        <a href="">Консультация</a>
-        <a href="">Инструкция</a>
-        <a href="">Возможности</a>
+        <a href="#oProject">О проекте</a>
+        <a href="#konsultation">Консультация</a>
+        <a href="#instruction">Инструкция</a>
+        <a href="#vozmojnocns">Возможности</a>
     </div>
     <header>
         <div class="container">
@@ -24,10 +24,10 @@
                     <div class="logo-two">Банкрот</div>
                 </div>
                 <div class="menu-nav">
-                    <a href="">О проекте</a>
-                    <a href="">Консультация</a>
-                    <a href="">Инструкция</a>
-                    <a href="">Возможности</a>
+                    <a href="#oProject">О проекте</a>
+                    <a href="#konsultation">Консультация</a>
+                    <a href="#instruction">Инструкция</a>
+                    <a href="#vozmojnocns">Возможности</a>
                 </div>
                 <div class="telephone">
                     <a href="tel:8800000000">8 800 0000000</a>
@@ -38,7 +38,7 @@
     </header>
   
     <section>
-        <div class="container">
+        <div class="container" id="konsultation">
             <div class="displayOne-wrapper">
                 <div class="column left">
                     <div class="title">
@@ -244,7 +244,7 @@
         </div>
     </section>
     <section class="section-tabs">
-        <div class="container container-manual">
+        <div class="container container-manual" id="instruction">
             <div class="manual-title">Как пользоваться <br>
                 сервисом?</div>
             <div class="manual-wrapper">
@@ -331,7 +331,7 @@
         </div>
     </section>
 
-    <section class="features">
+    <section class="features" id="vozmojnocns">
         <div class="container">
             <h2>Дополнительные возможности сервиса</h2>
             <div class="features-wrapper">
